--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,27 +1,163 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 233 100% 10%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 0 100% 30%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 240 17% 95%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 0 0% 70%;
+    --dark: 232 100% 6%;
+    --dark-gray: 240, 6%, 83%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply m-0 p-0 box-border text-primary text-[12px] outline-none hover:outline-none active:outline-none focus:outline-none;
+    line-height: 160%;
+  }
+  body {
+    @apply bg-muted;
+  }
+}
+
+.container {
+  @apply max-w-[1196px] mx-auto px-[10px];
+}
+section {
+  @apply py-[90px];
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply flex flex-wrap items-center gap-[16px];
+  border: none !important;
+}
+
+h1 {
+  @apply text-4xl font-extrabold lg:text-5xl;
+}
+
+h2 {
+  @apply border-b pb-2 text-3xl font-semibold first:mt-0;
+}
+
+h3 {
+  @apply text-2xl font-semibold;
+}
+
+h4 {
+  @apply text-xl font-semibold;
+}
+
+p {
+  @apply leading-7 [&:not(:first-child)]:mt-6;
+}
+
+blockquote {
+  @apply mt-6 border-l-2 pl-6 italic;
+}
+
+.table {
+  @apply w-full;
+
+  thead {
+    tr {
+      @apply m-0 border-t p-0 even:bg-muted;
+
+      th {
+        @apply border px-4 py-2 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right;
+      }
+    }
+  }
+  tbody {
+    tr {
+      @apply m-0 border-t p-0 even:bg-muted;
+
+      td {
+        @apply border px-4 py-2 text-left [&[align=center]]:text-center [&[align=right]]:text-right;
+      }
+    }
+  }
+}
+
+ul {
+  @apply my-6 [&>li]:mt-2;
+}
+
+code {
+  @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+}
+
+.container {
+  @apply max-w-[1440px] px-[16px] mx-auto;
+}
+
+section {
+  @apply py-[64px] md:py-[90px];
+}
+
+fieldset {
+  @apply space-y-[16px];
 }
